--- a/mysql-b2/Dockerfile
+++ b/mysql-b2/Dockerfile
@@ -1,6 +1,6 @@
 FROM alpine:3
 
-RUN apk add --no-cache postgresql-client
+RUN apk add --no-cache mysql-client
 
 RUN wget https://github.com/Backblaze/B2_Command_Line_Tool/releases/download/v3.4.0/b2-linux -O /usr/local/bin/b2
 RUN chmod +x /usr/local/bin/b2
